--- a/src/all-articles.html
+++ b/src/all-articles.html
@@ -24,29 +24,17 @@
       <a class="header__link" href="/blog/">All Posts</a>
     </div>
     <h1 class="header__title">LUXSCINTILLA</h1>
-    <div class="header__box">
-      <div class="quote">
-        <p class="quote__text">“The expert in anything was once a beginner.”</p>
-        <p class="quote__name">― Helen Hayes</p>
-      </div>
-
-      <div class="cto">
-        <p class="cto__text">My blog posts focus on the knowledge that is often tested for in interviews, this is
-          because I myself have searched high and low to pinpoint the topics of interest</p>
-        <img class="cto__icon" src="./assets/arrow-down.png" alt="arrow down">
-      </div>
-    </div>
   </header>
 
   <main>
 
-    <section class="featured">
-      <h2 class="featured__title">Featured Posts</h2>
-      <p class="featured__subtitle">Stay up to date with the most recent articles</p>
+    <section class="featured featured--allposts">
+      <h2 class="featured__title">All Posts</h2>
+      <p class="featured__subtitle">Look through all articles to date</p>
 
       <ul class="featured__list">
 
-        <li class="featured__item featured__item--top">
+        <li class="featured__item featured__item">
           <article class="article">
             <img class="article__img" src="./assets/blog/article-1.jpg">
             <div class="article__body">
@@ -102,6 +90,18 @@
               <h3 class="article__title">Some Other Post</h3>
               <p class="article__snippet">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odio tempore
                 adipisci provident explicabo illum cumque.</p>
+              <a class="btn btn--primary" href="./blog/my-first-article/">Read Post</a>
+            </div>
+          </article>
+        </li>
+
+        <li class="featured__item">
+          <article class="article">
+            <img class="article__img" src="./assets/blog/article-2.jpg">
+            <div class="article__body">
+              <h3 class="article__title">My Second Post</h3>
+              <p class="article__snippet">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid autem vitae,
+                dolor minus perferendis ab. Magnam.</p>
               <a class="btn btn--primary" href="./blog/my-first-article/">Read Post</a>
             </div>
           </article>
