add eleventy initial setup

--- a/src/all-articles.html
+++ b/src/all-articles.html
@@ -19,9 +19,17 @@
 
   <header class="header">
     <div class="header__container">
-      <a class="header__link" href="/">Featured</a>
-      <a class="header__link" href="https://luxscintilla.com/">Home</a>
-      <a class="header__link" href="/blog/">All Posts</a>
+      <ul class="header__nav">
+        <li class="header__link">
+          <a href="/">Featured</a>
+        </li>
+        <li class="header__link">
+          <a class="header__link" href="https://luxscintilla.com/">Home</a>
+        </li>
+        <li class="header__link">
+          <a class="header__link" href="/blog/">All Posts</a>
+        </li>
+      </ul>
     </div>
     <h1 class="header__title">LUXSCINTILLA</h1>
   </header>
