--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,17 @@
 <body>
 
   <header class="header">
-    <div class="header__container">
-      <a class="header__link" href="/">Featured</a>
-      <a class="header__link" href="https://luxscintilla.com/">Home</a>
-      <a class="header__link" href="/blog/">All Posts</a>
-    </div>
+    <ul class="header__nav">
+      <li>
+        <a class="header__link" href="/">Featured</a>
+      </li>
+      <li>
+        <a class="header__link" href="https://luxscintilla.com/">Home</a>
+      </li>
+      <li>
+        <a class="header__link" href="/blog/">All Posts</a>
+      </li>
+    </ul>
     <h1 class="header__title">LUXSCINTILLA</h1>
     <div class="header__box">
       <div class="quote">
