add optimized imgs and a aria label

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,8 @@
       <h3 class="article__title"><a href="/blog/2021-16-01-my-sixth-article/">My Sixth Article</a></h3>
       <p class="article__date">Jan 16, 2024</p>
       <p class="article__snippet">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime.</p>
-      <a class="btn" href="/blog/2021-16-01-my-sixth-article/">Continue Reading</a>
+      <a class="btn" aria-label="continue reading about My Sixth Article" href="/blog/2021-16-01-my-sixth-article/">Continue
+        Reading</a>
     </div>
   </article>
 </li><li class="featured__item">
@@ -68,7 +69,8 @@
       <h3 class="article__title"><a href="/blog/2021-11-01-my-fourth-article/">My Fourth Article</a></h3>
       <p class="article__date">Jan 11, 2024</p>
       <p class="article__snippet">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime.</p>
-      <a class="btn" href="/blog/2021-11-01-my-fourth-article/">Continue Reading</a>
+      <a class="btn" aria-label="continue reading about My Fourth Article" href="/blog/2021-11-01-my-fourth-article/">Continue
+        Reading</a>
     </div>
   </article>
 </li><li class="featured__item">
@@ -78,7 +80,8 @@
       <h3 class="article__title"><a href="/blog/2021-07-01-my-second-article/">My Second Article</a></h3>
       <p class="article__date">Jan 7, 2024</p>
       <p class="article__snippet">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime.</p>
-      <a class="btn" href="/blog/2021-07-01-my-second-article/">Continue Reading</a>
+      <a class="btn" aria-label="continue reading about My Second Article" href="/blog/2021-07-01-my-second-article/">Continue
+        Reading</a>
     </div>
   </article>
 </li></ul>
